--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" product-name="toggle_content" date="2015-11-06T13:57:28+00:00">
+	<file source-language="en" datatype="plaintext" original="messages" product-name="moodpicture" date="2015-11-04T15:04:08+00:00">
 		<header/>
 		<body>
-			<trans-unit id="flux.fluidcontent">
-				<source>Fluid content element example</source>
+			<trans-unit id="flux.standard">
+				<source>Example page</source>
 			</trans-unit>
-			<trans-unit id="flux.fluidcontent.description">
-				<source>Description can be entered in LLL file locallang.xlf of extension toggle_content</source>
+			<trans-unit id="flux.standard.description">
+				<source>Description can be entered in LLL file locallang.xlf of extension test</source>
 			</trans-unit>
-			<trans-unit id="flux.fluidpage">
-				<source>Standard fluid page</source>
+			<trans-unit id="flux.example">
+				<source>Toggle Element</source>
 			</trans-unit>
-			<trans-unit id="flux.fluidpage.description">
-				<source>Description can be entered in LLL file locallang.xlf of extension toggle_content</source>
+			<trans-unit id="flux.example.description">
+				<source>Toggle Element</source>
 			</trans-unit>
 		</body>
 	</file>
 </xliff>
+
